--- a/app/src/main/res/layout/fragment_details_tab.xml
+++ b/app/src/main/res/layout/fragment_details_tab.xml
@@ -432,6 +432,14 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
 
+            <ImageButton
+                android:id="@+id/pdf_icon"
+                android:src="@drawable/pdf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"/>
+
 
 
         </RelativeLayout>
