--- a/app/src/main/res/layout/fragment_private_tenders.xml
+++ b/app/src/main/res/layout/fragment_private_tenders.xml
@@ -43,7 +43,18 @@
 
 
             </LinearLayout>
+            <TextView
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="מ"
+                />
+            <ImageButton
+                android:id="@+id/filter_start_date_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_calendar"
+                android:layout_weight="1"/>
             <TextView
 
                 android:layout_width="wrap_content"
