--- a/app/src/main/res/layout/fragment_private_tenders.xml
+++ b/app/src/main/res/layout/fragment_private_tenders.xml
@@ -18,6 +18,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/counter_tender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="35dp"
+            />
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="הגדרות סינון"/>
