--- a/app/src/main/res/layout/fragment_private_tenders.xml
+++ b/app/src/main/res/layout/fragment_private_tenders.xml
@@ -47,7 +47,6 @@
                 android:layout_height="wrap_content"
                 >
 
-
             </LinearLayout>
             <TextView
 
@@ -87,6 +86,30 @@
                 android:layout_height="wrap_content"
                 android:text="אפס"
                 android:layout_weight="1"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="רמת דחיפות:"/>
+            <CheckBox
+                android:id="@+id/checkBox_dhifot_low"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="נמוכה" />
+            <CheckBox
+                android:id="@+id/checkBox_dhifot_high"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="גבוהה" />
+
+
 
         </LinearLayout>
 
