--- a/app/src/main/res/layout/fragment_private_tenders.xml
+++ b/app/src/main/res/layout/fragment_private_tenders.xml
@@ -147,7 +147,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="זמן שנותר"
+                android:text="סטטוס"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 tools:textColor="#222b92" />
