--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#ffffcc">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/contact_q"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content">
-
             <TextView
                 android:text="איש קשר : "
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"/>
 
             <TextView
                 android:text="name"
@@ -26,20 +25,19 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="80dp"/>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="wrap_content">
 
             <TextView
                 android:text="נייד : "
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="200dp"/>
 
             <TextView
                 android:text="phone"
@@ -47,52 +45,60 @@
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="245dp"/>
 
-        </LinearLayout>
 
-
-
-    </LinearLayout>
-
+    </RelativeLayout>
     <LinearLayout
-        android:gravity="center"
+        android:id="@+id/l"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="10dp"
+        android:layout_below="@+id/contact_q"
+        android:background="#ffffcc">
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/contact_b"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/l">
 
             <TextView
                 android:text="אמייל : "
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"/>
 
             <TextView
                 android:text="email"
                 android:id="@+id/email"
                 android:textStyle="bold"
                 android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="60dp"/>
+
 
             <Button
                 android:text="לעוד פרטים"
                 android:id="@+id/details"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded2"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"/>
 
-        </LinearLayout>
 
-    </LinearLayout>
 
-</LinearLayout>
+    </RelativeLayout>
+
+</RelativeLayout>
