--- a/app/src/main/res/layout/activity_my_tenders.xml
+++ b/app/src/main/res/layout/activity_my_tenders.xml
@@ -39,6 +39,15 @@
             android:text="המכרזים שלי"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/counter_tender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100"
+            android:textSize="35dp"
+            android:layout_alignParentRight="true"
+
+            />
 
         <LinearLayout
             android:orientation="horizontal"
