--- a/app/src/main/res/layout/fragment_details_tab.xml
+++ b/app/src/main/res/layout/fragment_details_tab.xml
@@ -46,7 +46,8 @@
                 android:id="@+id/editMqt"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:singleLine="false" />
+                android:singleLine="false"
+                />
 
         </LinearLayout>
 
