--- a/app/src/main/res/layout/dialog5.xml
+++ b/app/src/main/res/layout/dialog5.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#3E80B4"
-    android:gravity="center_horizontal"
+    android:background="#e6fff5"
+    android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingBottom="15dp">
 
@@ -12,8 +12,8 @@
     <ImageView
         android:layout_marginTop="10dp"
         android:id="@+id/imageview"
-        android:layout_width="350dp"
-        android:layout_height="350dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
     <LinearLayout
