--- a/app/src/main/res/layout/nav_header_tenders.xml
+++ b/app/src/main/res/layout/nav_header_tenders.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/mainactivitybackground"
+    android:background="@color/ic_menu_background"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -26,7 +26,7 @@
     <TextView
         android:id="@+id/name_user"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_above="@+id/image_user"
         android:layout_alignParentStart="true"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
