--- a/app/src/main/res/layout/activity_price_item.xml
+++ b/app/src/main/res/layout/activity_price_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="#66ccff"
             android:id="@+id/title"
             android:textStyle="bold"
             android:textSize="25dp"
@@ -21,9 +21,11 @@
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="הצעת מחיר - פריט מס' " />
+            android:text="הצעת מחיר - פריט מס' "
+            android:background="@drawable/round"/>/>
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -31,6 +33,7 @@
 
             <TextView
                 android:textStyle="bold"
+                android:textColor="#000099"
                 android:textSize="15dp"
                 android:text="מחיר ליחידה: "
                 android:layout_width="wrap_content"
@@ -41,23 +44,29 @@
                 android:id="@+id/editPrice"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:textColor="#000000" />
 
             <Button
                 android:id="@+id/cal"
                 android:text="חשב"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded3"
+                android:textColor="#ffffff"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#000099"
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text="מחיר לכל הכמות: "
@@ -67,19 +76,29 @@
             <EditText
                 android:enabled="false"
                 android:id="@+id/editSum"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:background="@null"
+                android:textColor="#000000"/>
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:src="@drawable/shekel"
+                android:layout_gravity="bottom"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#000099"
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:text="מחיר מטרה: "
@@ -89,20 +108,30 @@
             <EditText
                 android:enabled="false"
                 android:id="@+id/editPriceUser"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:background="@null"
+                android:textColor="#000000"/>
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:src="@drawable/shekel"
+                android:layout_gravity="bottom"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
+                android:textColor="#000099"
                 android:textSize="15dp"
                 android:text="הערות ספק: "
                 android:layout_width="wrap_content"
@@ -110,9 +139,11 @@
 
             <EditText
                 android:id="@+id/editComments"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:singleLine="true" />
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:textColor="#000000"/>
 
         </LinearLayout>
 
@@ -120,7 +151,9 @@
             android:id="@+id/save"
             android:text="שמור"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded3"
+            android:textColor="#ffffff"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
