--- a/app/src/main/res/layout/fragment_details_tab.xml
+++ b/app/src/main/res/layout/fragment_details_tab.xml
@@ -67,18 +67,17 @@
 
                 <TextView
                     android:textStyle="bold"
-                    android:textSize="15dp"
                     android:text="שם:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#000099"
+                    android:textSize="15dp"
                     />
 
                 <EditText
                     android:focusable="false"
                     android:enabled="false"
                     android:id="@+id/editName"
-                    android:text="דלתא"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:singleLine="false"
@@ -230,7 +229,6 @@
                     android:enabled="false"
                     android:focusable="false"
                     android:id="@+id/editMqt"
-                    android:text="555"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:singleLine="false"
@@ -421,7 +419,6 @@
                     android:singleLine="false"
                     android:focusable="false"
                     android:enabled="false"
-                    android:text="נא לצרף מסמכי ביטוח וחומרה"
                     android:id="@+id/editComments"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
@@ -458,88 +455,102 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_marginBottom="5dp"
+            <TextView
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/title3"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:text="אנא בחר קובץ"
                 android:background="@drawable/round"
+                android:layout_marginBottom="5dp"
                 />
 
 
             <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/textForUser"
-                    android:text="אנא בחר קובץ "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="5dp">
 
                 <ImageButton
                     android:id="@+id/uploadImageFromGallery"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:src="@android:drawable/ic_menu_gallery" />
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/gleriya"
+                    android:src="@drawable/gleriya" />
 
                 <TextView
                     android:id="@+id/gallery_txt"
-                    android:text="גלריה"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="22dp"
                     android:layout_marginTop="60dp"
-                    android:layout_marginRight="22dp"/>
+                    android:text="גלריה" />
 
                 <ImageView
-                    android:src="@mipmap/ic_image"
                     android:id="@+id/image"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/ic_image" />
 
                 <ImageButton
                     android:id="@+id/cam"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="90dp"
                     android:layout_marginRight="10dp"
-                    android:src="@android:drawable/ic_menu_camera" />
+                    android:layout_marginTop="90dp"
+                    android:src="@drawable/mazle"
+                    android:background="@drawable/mazle"/>
+
                 <TextView
                     android:id="@+id/cam_txt"
-                    android:text="מצלמה"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="140dp"
                     android:layout_marginRight="17dp"
-                    />
-                <Button
-                    android:id="@+id/uploadImage"
-                    android:text="pdf"
+                    android:layout_marginTop="140dp"
+                    android:text="מצלמה" />
+
+                <ImageButton
+                    android:id="@+id/uploadPdf"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/pdf_one"
+                    android:background="@drawable/pdf_one"
+                     />
 
                 <ImageButton
                     android:id="@+id/pdf_icon"
-                    android:src="@drawable/pdf"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="90dp"
+                    android:src="@drawable/pdf_two"
+                    android:background="@drawable/pdf_two"/>
+                <TextView
+                    android:id="@+id/file_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"/>
-
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginTop="140dp"
+                    android:text="שם הקובץ"
+                    />
 
 
             </RelativeLayout>
@@ -553,9 +564,11 @@
 
                 <Button
                     android:text="המשך לתמחור"
+                    android:textColor="#ffffff"
                     android:id="@+id/btn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded3"/>
 
             </LinearLayout>
 
