--- a/app/src/main/res/layout/fragment_market_tab.xml
+++ b/app/src/main/res/layout/fragment_market_tab.xml
@@ -9,55 +9,67 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
-
-
-
       <LinearLayout
           android:layout_marginBottom="25dp"
           android:orientation="vertical"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          android:textDirection="rtl">
 
-         <LinearLayout
+         <RelativeLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:background="@drawable/round">
 
 
             <TextView
-                android:layout_width="55dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="מס'"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                tools:textColor="#222b92"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:textColor="#000099" />
 
             <TextView
-                android:layout_width="135dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="שם פריט"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                tools:textColor="#222b92"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="52dp"
+                android:textColor="#000099"
+                />
 
             <TextView
-                android:layout_width="75dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="כמות"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                tools:textColor="#222b92"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="153dp"
+                android:textColor="#000099" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="מחיר"
-                android:textSize="20dp"
+                android:textSize="17dp"
                 android:textStyle="bold"
-                tools:textColor="#222b92" />
+                tools:textColor="#222b92"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="215dp"
+                android:textColor="#000099" />
 
 
-         </LinearLayout>
+         </RelativeLayout>
 
          <ListView
              android:textDirection="rtl"
@@ -66,15 +78,30 @@
              android:layout_height="150dp">
          </ListView>
 
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="10dp"
+             android:background="@drawable/round"
+             android:layout_marginTop="10dp"
+             android:layout_marginBottom="5dp">
+         </LinearLayout>
          <TextView
-             android:layout_gravity="end"
+             android:layout_gravity="center"
              android:id="@+id/all_prices"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:text="סה''כ: "
+             android:text="לא תומחרו פריטים"
              android:textSize="20dp"
              android:textStyle="bold"
-             tools:textColor="#222b92" />
+             android:textColor="#000099" />
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="10dp"
+             android:background="@drawable/round"
+             android:layout_marginTop="10dp"
+             android:layout_marginBottom="5dp">
+         </LinearLayout>
 
          <LinearLayout
              android:id="@+id/market_details"
@@ -82,92 +109,125 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-
-
-      <LinearLayout
-          android:layout_marginBottom="10dp"
-          android:orientation="horizontal"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content">
-
-         <LinearLayout
-             android:layout_marginEnd="30dp"
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
-
-            <TextView
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="התחלת מכרז: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/dateStart"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="19/02/18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-         </LinearLayout>
-
-         <LinearLayout
-             android:layout_weight="0.5"
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
-
-            <TextView
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="שעה: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/timeStart"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="9:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-         </LinearLayout>
-
-      </LinearLayout>
-
-         <LinearLayout
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content">
-
             <LinearLayout
-                android:layout_weight="0.5"
-                android:layout_marginEnd="55dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-               <TextView
-                   android:textStyle="bold"
-                   android:textSize="15dp"
-                   android:text="סוף מכרז: "
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" />
+               <LinearLayout
+                   android:layout_marginEnd="30dp"
+                   android:layout_marginBottom="10dp"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
 
-               <TextView
-                   android:id="@+id/dateEnd"
-                   android:textStyle="bold"
-                   android:textSize="15dp"
-                   android:text="21/02/18"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" />
+                  <TextView
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="התחלת מכרז: "
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000000"/>
+
+                  <TextView
+                      android:id="@+id/dateStart"
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="19/02/18"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000099"/>
+
+               </LinearLayout>
+
+               <LinearLayout
+                   android:layout_weight="0.5"
+                   android:layout_marginBottom="10dp"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+
+                  <TextView
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="שעה: "
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000000"/>
+
+                  <TextView
+                      android:id="@+id/timeStart"
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="9:00"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000099"/>
+
+               </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+               <LinearLayout
+                   android:layout_weight="0.5"
+                   android:layout_marginEnd="55dp"
+                   android:layout_marginBottom="10dp"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+
+                  <TextView
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="סוף מכרז: "
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000000"/>
+
+                  <TextView
+                      android:id="@+id/dateEnd"
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="21/02/18"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000099"/>
+
+               </LinearLayout>
+
+               <LinearLayout
+                   android:layout_weight="0.5"
+                   android:layout_marginBottom="10dp"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
+
+                  <TextView
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="שעה: "
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000000"/>
+
+                  <TextView
+                      android:id="@+id/timeEnd"
+                      android:textStyle="bold"
+                      android:textSize="15dp"
+                      android:text="9:00"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="#000099"/>
+
+               </LinearLayout>
 
             </LinearLayout>
 
@@ -181,96 +241,89 @@
                <TextView
                    android:textStyle="bold"
                    android:textSize="15dp"
-                   android:text="שעה: "
+                   android:text="זמן נותר: "
                    android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" />
+                   android:layout_height="wrap_content"
+                   android:textColor="#000000"/>
 
                <TextView
-                   android:id="@+id/timeEnd"
+                   android:id="@+id/timer"
                    android:textStyle="bold"
                    android:textSize="15dp"
-                   android:text="9:00"
+                   android:text="3 Days, 11:05:07"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textColor="#000099"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_weight="0.5"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+               <TextView
+                   android:textStyle="bold"
+                   android:textSize="15dp"
+                   android:text="הערות ספק: "
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textColor="#000000"/>
+
+               <EditText
+                   android:id="@+id/editComments"
+                   android:layout_width="180dp"
+                   android:layout_height="wrap_content"
+                   android:text="sdsdsdsdsdsdsdsdsdsdsdsdsdsdsdsds"
+                   android:textColor="#000099"
+                   android:textColorHighlight="#000000"
+                   />
+               <ImageView
+                   android:visibility="invisible"
+                   android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-         </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@drawable/round"
 
-         <LinearLayout
-             android:layout_weight="0.5"
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
+                android:layout_marginBottom="10dp">
+            </LinearLayout>
 
-            <TextView
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="זמן נותר: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:id="@+id/layoutadd"
+                android:gravity="center"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/timer"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="3 Days, 11:05:07"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+               <Button
+                   android:layout_marginEnd="35dp"
+                   android:text="הגש"
+                   android:id="@+id/addTender"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:background="@drawable/rounded3"
+                   android:textColor="#ffffff"
+                   />
 
-         </LinearLayout>
+               <Button
+                   android:layout_marginStart="35dp"
+                   android:text="טיוטה"
+                   android:id="@+id/tyotaTender"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:background="@drawable/rounded3"
+                   android:textColor="#ffffff"/>
 
-         <LinearLayout
-             android:layout_weight="0.5"
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
-
-            <TextView
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:text="הערות ספק: "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <EditText
-                android:id="@+id/editComments"
-                android:layout_width="170dp"
-                android:layout_height="100dp" />
-
-            <ImageView
-                android:visibility="invisible"
-                android:id="@+id/image"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
-
-         </LinearLayout>
-
-         <LinearLayout
-             android:id="@+id/layoutadd"
-             android:gravity="center"
-             android:layout_marginBottom="10dp"
-             android:orientation="horizontal"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
-
-           <Button
-               android:layout_marginEnd="35dp"
-               android:text="הגש"
-               android:id="@+id/addTender"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content" />
-
-            <Button
-                android:layout_marginStart="35dp"
-                android:text="טיוטה"
-                android:id="@+id/tyotaTender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-         </LinearLayout>
+            </LinearLayout>
 
 
          </LinearLayout>
