--- a/app/src/main/res/layout/marketitem.xml
+++ b/app/src/main/res/layout/marketitem.xml
@@ -1,60 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:gravity="center_vertical"
     android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:textDirection="rtl"
     >
 
     <TextView
         android:id="@+id/number"
-        android:layout_width="55dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:text="5555"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        tools:textColor="#222b92"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:layout_centerVertical="true"
+        />
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="135dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:text="A"
+        android:text="מנורת גב לסלון"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        tools:textColor="#222b92"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="52dp"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/mount"
-        android:layout_width="55dp"
+        android:layout_width="28dp"
         android:layout_height="wrap_content"
-        android:text="10"
+        android:text="100"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        tools:textColor="#222b92"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="155dp"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="לא תומחר"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:textColor="#222b92" />
+        tools:textColor="#222b92"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="215dp"
+        android:layout_centerVertical="true"/>
 
     <ImageView
         android:id="@+id/gotoPrice"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginLeft="5dp"
         android:src="@mipmap/ic_price"
+        android:layout_alignParentLeft="true"
         />
 
 
 
 
-</LinearLayout>
+</RelativeLayout>
